--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ music-player/images/music-2.jpg
 style.css.map
 style.min.css
 style.min.css.map
+howmanylines.txt
+themes.js
+temporary_themes.txt
