--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ style.min.css.map
 howmanylines.txt
 themes.js
 temporary_themes.txt
+images.zip
+skill-images.zip
+music-player.zip
+Przechwytywanie.PNG
+songs.zip
